--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b6a110bc44fa0d3dd280e12d31d86cff"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_KEY%&libraries=services,clusterer"
     ></script>
   </body>
 </html>
